# go-bazel-sample

./: .bazelproject  .bazelrc  .gitignore  BUILD.bazel  WORKSPACE  deps.bzl
patches/: bazel-zig-cc-fsanitize.patch  bazel-zig-cc-glibc.patch  bazel-zig-cc-launcher-diagnostics.patch  cgopackages.patch
rules/: platform.bzl
src/jamy.be/: BUILD.bazel  go.mod
src/jamy.be/sample/: BUILD.bazel  sample.go  sample_test.go
