load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_test(
    name = "go_default_test",
    srcs = ["sample_test.go"],
    embed = [":go_default_library"],
)

go_library(
    name = "go_default_library",
    srcs = ["sample.go"],
    importpath = "jamy.be/sample",
    visibility = ["//visibility:public"],
    deps = [
        "//gen/jamy.be/sample:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
